# dataset-construct

./: .gitignore  dinov3.py  jsonl-to-json.py  process_json.py  pyproject.toml  run.sh
generate_text/: new_unpreferred_response.py  run.sh
img-similarity/: main.py  run.sh
img-similarity/dinov3_vit_h.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
img-similarity/example/: dino.py
img-similarity/output/last_hidden_state/: pref_data.json
mmrlhf/: dummy.py
segmentation/: main.py
segmentation/DETR/: main.py
segmentation/yolo/: main.py
segmentation/yolov8x/: main.py
text-similarity/: calculate.py  main.py  run.sh  select.py
utils/: delete_redundant.py  draw_hist.py  radar_chart_template.py
yilin-DPO-dataset/: main.py
yilin-DPO-dataset/add-masked/: main.py
yilin-DPO-dataset/add_masked_img/: main.py
yilin-DPO-dataset/delete/: main.py
yilin-DPO-dataset/mmrlhf/: remove_CN.py  remove_mcq.py
yilin-DPO-dataset/re-align/: main.py
yilin-DPO-dataset/silkie/: main.py
